closes #1 - Botões tela inicial chamando outros sistemas

--- a/cee-admin_parent/cee-admin/src/main/webapp/inicial.xhtml
+++ b/cee-admin_parent/cee-admin/src/main/webapp/inicial.xhtml
@@ -39,16 +39,14 @@ e explicações sobre como se obter ajuda para a aplicação. Esta pagina é um 
 			</ui:insert>
 <div class="home">
 	<div class="home-coluna-esq">
-		<div class="home-titulo">Operações Frequentes</div>
+		<div class="home-titulo">Sistemas</div>
 		<div class="home-botao"> 
-			<a href="#{request.contextPath}/f/inicial.xhtml" class="ui-state-default ui-corner-all plc-botao-quiosque">
+			<a href="#{request.contextPath}" class="ui-state-default ui-corner-all plc-botao-quiosque">
 			<div><img class="ui-state-default plc-imagem" style="border: none;" src="#{request.contextPath}/res/midia/home-quiosque-home.png"/></div><div>Home</div></a>
-			<a href="#{request.contextPath}/f/n/pessoasel" class="ui-state-default ui-corner-all plc-botao-quiosque">
-			<div><img class="ui-state-default plc-imagem" style="border: none;" src="#{request.contextPath}/res/midia/home-quiosque-pessoa.png"/></div><div>Pessoa</div></a>
-			<a href="#{request.contextPath}/f/n/usuariosel" class="ui-state-default ui-corner-all plc-botao-quiosque">
-			<div><img class="ui-state-default plc-imagem" style="border: none;" src="#{request.contextPath}/res/midia/home-quiosque-usuario.png"/></div><div>Usuário</div></a>
+			<a href="../cee-livraria" class="ui-state-default ui-corner-all plc-botao-quiosque">
+			<div><img class="ui-state-default plc-imagem" style="border: none;" src="#{request.contextPath}/res/midia/home-quiosque-livraria.png"/></div><div>Livraria</div></a>
 			<a href="#" onclick="document.getElementById('plc-acao-desconecta').click();" class="ui-state-default ui-corner-all plc-botao-quiosque">
-			<div><img class="ui-state-default plc-imagem" style="border: none;" src="#{request.contextPath}/res/midia/home-quiosque-exit.png"></img></div><div>Sair</div></a> 
+			<div><img class="ui-state-default plc-imagem" style="border: none;" src="#{request.contextPath}/res/midia/home-quiosque-logout.png"></img></div><div>Sair</div></a> 
 		</div>
 	</div>
 	<div class="home-coluna-dir">
