Adicionar botões dos novos sistemas na tela incial

--- a/cee-admin_parent/cee-admin/src/main/webapp/inicial.xhtml
+++ b/cee-admin_parent/cee-admin/src/main/webapp/inicial.xhtml
@@ -45,6 +45,10 @@ e explicações sobre como se obter ajuda para a aplicação. Esta pagina é um 
 			<div><img class="ui-state-default plc-imagem" style="border: none;" src="#{request.contextPath}/res/midia/home-quiosque-home.png"/></div><div>Home</div></a>
 			<a href="../cee-livraria" class="ui-state-default ui-corner-all plc-botao-quiosque">
 			<div><img class="ui-state-default plc-imagem" style="border: none;" src="#{request.contextPath}/res/midia/home-quiosque-livraria.png"/></div><div>Livraria</div></a>
+			<a href="../cee-revista" class="ui-state-default ui-corner-all plc-botao-quiosque">
+			<div><img class="ui-state-default plc-imagem" style="border: none;" src="#{request.contextPath}/res/midia/home-quiosque-revista.png"/></div><div>Revista</div></a>
+			<a href="../cee-associado" class="ui-state-default ui-corner-all plc-botao-quiosque">
+			<div><img class="ui-state-default plc-imagem" style="border: none;" src="#{request.contextPath}/res/midia/home-quiosque-associado.png"/></div><div>Associados</div></a>
 			<a href="#" onclick="document.getElementById('plc-acao-desconecta').click();" class="ui-state-default ui-corner-all plc-botao-quiosque">
 			<div><img class="ui-state-default plc-imagem" style="border: none;" src="#{request.contextPath}/res/midia/home-quiosque-logout.png"></img></div><div>Sair</div></a> 
 		</div>
