closes #6 - Formas de pagamento
O sistema possibilita o cadastro das formas de pagamento aceitas na CEE
(dinheiro, cheque, cartão crédito, cartão débito, pic pay, etc). Cada
subsistema pode especializar estas formas de pagamento criando um
subconjunto destas, como por exemplo: dinheiro e cheque.

--- a/cee-admin_parent/cee-admin/src/main/webapp/WEB-INF/fcls/geralMenu.xhtml
+++ b/cee-admin_parent/cee-admin/src/main/webapp/WEB-INF/fcls/geralMenu.xhtml
@@ -33,6 +33,11 @@
 						<label jsfc="plcf:titulo" tituloChave="menu.usuario.titulo">Usuário</label>
 					</a>
 				</li>
+				<li>
+					<a href="#{request.contextPath}/f/n/formapagto">
+						<label jsfc="plcf:titulo" tituloChave="menu.formapagto.titulo">Forma Pagamento</label>
+					</a>
+				</li>
 			</ul>
 		</li>
 		<ui:include src="/WEB-INF/fcls-plc/geralMenuAjuda.xhtml"/>
