--- a/cee-admin_parent/cee-admin/src/main/webapp/inicial.xhtml
+++ b/cee-admin_parent/cee-admin/src/main/webapp/inicial.xhtml
@@ -41,8 +41,8 @@ e explicações sobre como se obter ajuda para a aplicação. Esta pagina é um 
 	<div class="home-coluna-esq">
 		<div class="home-titulo">Sistemas</div>
 		<div class="home-botao"> 
-			<a href="#{request.contextPath}" class="ui-state-default ui-corner-all plc-botao-quiosque">
-			<div><img class="ui-state-default plc-imagem" style="border: none;" src="#{request.contextPath}/res/midia/home-quiosque-home.png"/></div><div>Home</div></a>
+			<!--a href="#{request.contextPath}" class="ui-state-default ui-corner-all plc-botao-quiosque">
+			<div><img class="ui-state-default plc-imagem" style="border: none;" src="#{request.contextPath}/res/midia/home-quiosque-home.png"/></div><div>Home</div></a-->
 			<a href="../cee-livraria" class="ui-state-default ui-corner-all plc-botao-quiosque">
 			<div><img class="ui-state-default plc-imagem" style="border: none;" src="#{request.contextPath}/res/midia/home-quiosque-livraria.png"/></div><div>Livraria</div></a>
 			<a href="../cee-revista" class="ui-state-default ui-corner-all plc-botao-quiosque">
