Pequenos ajustes visuais
Imagem botão logout, etc

--- a/cee-admin_parent/cee-admin/src/main/webapp/WEB-INF/fcls/pessoa/pessoaMan.xhtml
+++ b/cee-admin_parent/cee-admin/src/main/webapp/WEB-INF/fcls/pessoa/pessoaMan.xhtml
@@ -25,7 +25,7 @@
 				</plcf:celula> 
 				<plcf:celula> 
 					<plcf:titulo value="#{msg['label.sexo']}"/>  
-					<plcf:radio id="sexo" value="#{pessoa.sexo}" dominio="Sexo" layout="horizontal" inlineStyle="width:180px;" ajudaChave="ajuda.sexo"/> 
+					<plcf:radio id="sexo" value="#{pessoa.sexo}" dominio="Sexo" layout="horizontal" inlineStyle="float:left; height:40px; width:170px;" ajudaChave="ajuda.sexo"/> 
 				</plcf:celula> 
 			</plcf:linha>  
 			<plcf:linha> 
