--- a/cee-admin_parent/cee-admin/src/main/webapp/WEB-INF/fcls/usuario/usuarioMdt.xhtml
+++ b/cee-admin_parent/cee-admin/src/main/webapp/WEB-INF/fcls/usuario/usuarioMdt.xhtml
@@ -21,17 +21,8 @@
 						propSelPop="pessoa" idExibe="N" lookupTamanho="60" 
 						idSomenteLeitura="N" autoRecuperacaoClasse="com.cee.admin.entity.PessoaEntity" 
 						actionSel="pessoasel" modal="S" ajudaChave="ajuda.pessoa" onkeydown="selecionaPorTecla(event,this);"
-						larg="900"
+						larg="1200" alt="800"
 						riaUsa="autocomplete(url='/cee-admin/soa/service/autocomplete.pessoa?q=nome')"/> 
-					<!--plcf:vinculado id="pessoa" value="#{usuario.pessoa}" 
-						propSelPop="pessoa" idExibe="S" lookupTamanho="60"
-						autoRecuperacaoPropriedade="cpf"
-						autoComplete="true"
-						idTamanho="15"
-						evento="y"
-						idSomenteLeitura="N" autoRecuperacaoClasse="com.cee.admin.entity.PessoaEntity" 
-						actionSel="pessoasel" modal="S" ajudaChave="ajuda.pessoa" onkeydown="selecionaPorTecla(event,this);"
-						larg="900"/--> 
 				</plcf:celula>  
 				<plcf:celula> 
 					<plcf:titulo value="#{msg['label.nomeUsuario']}"/>  
