--- a/cee-admin_parent/cee-admin/src/main/webapp/WEB-INF/fcls/usuario/usuariosel.xhtml
+++ b/cee-admin_parent/cee-admin/src/main/webapp/WEB-INF/fcls/usuario/usuariosel.xhtml
@@ -25,7 +25,7 @@
 									autoRecuperacaoClasse="com.cee.admin.entity.PessoaEntity" actionSel="pessoasel" 
 									modal="S" ajudaChave="ajuda.pessoa" 
 									onkeydown="selecionaPorTecla(event,this);"
-									larg="900"
+									larg="1200" alt="700"
 									riaUsa="autocomplete(url='/cee-admin/soa/service/autocomplete.pessoa?q=nome')"/> 
 							</plcf:celula> 
 						</plcf:linha> 
