Cadastro de pessoas
Ajuste na pesquisa incluindo filtro por CPF
Ajuste na mensage de tratamento de duplicidade de CPF

--- a/cee-admin_parent/cee-admin/src/main/webapp/WEB-INF/fcls/pessoa/pessoasel.xhtml
+++ b/cee-admin_parent/cee-admin/src/main/webapp/WEB-INF/fcls/pessoa/pessoasel.xhtml
@@ -22,7 +22,7 @@
 								<plcf:titulo value="#{msg['label.nome']}"/>  
 								<plcf:texto id="nome" value="#{pessoa.nome}" ajudaChave="ajuda.nome" tamanho="30"/> 
 							</plcf:celula>  
-							<plcf:celula rendered="false"> 
+							<plcf:celula> 
 								<plcf:titulo value="#{msg['label.cpf']}"/>  
 								<plcf:texto id="cpf" value="#{pessoa.cpf}" ajudaChave="ajuda.cpf"/> 
 							</plcf:celula>  
